tests/samples/call-function-bad-syntax.err
call-function-bad-syntax.flow:2:Syntax error. "do\n  call *$some_inte".
