tests/samples/call-function-bad-syntax.flow
flow onboarding do
  call $some_integration()
done
